<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloView"
        android:layout_width="261dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:text="@string/titulo"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/subtitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="387dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:text="@string/subtitulo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/testeView"
        app:layout_constraintStart_toStartOf="@+id/tituloView"
        app:layout_constraintTop_toBottomOf="@+id/tituloView" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:text="@string/teste_1"
        app:layout_constraintEnd_toStartOf="@+id/resp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testeView" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:text="@string/teste_2"
        app:layout_constraintEnd_toStartOf="@+id/resp2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="161dp"
        android:text="@string/teste_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resp3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnVerifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="59dp"
        android:text="@string/verificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resultView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/testeView"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:text="@string/fa_a_seu_teste"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/resp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo" />

    <TextView
        android:id="@+id/resp1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="49dp"
        android:text="@string/resposta_1"
        app:layout_constraintBottom_toTopOf="@+id/resp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/testeView"
        tools:text="0" />

    <TextView
        android:id="@+id/resp2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="44dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/resp3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/resp1" />

    <TextView
        android:id="@+id/resp3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="47dp"
        android:text="@string/__0"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/resp2" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="59dp"
        android:text="@string/___0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVerifica"
        app:layout_constraintTop_toBottomOf="@+id/resp3" />

</androidx.constraintlayout.widget.ConstraintLayout>